[package]
authors     = ['Parallel Team']
description = 'Parallel Finance'
edition     = '2018'
homepage    = 'parallel.finance'
license     = 'Unlicense'
name        = 'parallel-runtime'
repository  = 'https://github.com/parallel-finance/parallel'
version     = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { version = '4.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }

[dependencies]
codec       = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
hex-literal = { optional = true, version = '0.3.1' }
serde       = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-liquidate  = { path = '../pallets/liquidate', default-features = false }
pallet-loans      = { path = '../pallets/loans', default-features = false }
pallet-ocw-oracle = { path = '../pallets/ocw-oracle', default-features = false }
pallet-staking    = { path = '../pallets/staking', default-features = false }

# Substrate dependencies
frame-benchmarking                         = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, optional = true, version = '3.0.0' }
frame-executive                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-support                              = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-system                               = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
frame-system-benchmarking                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api               = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
orml-currencies                            = { path = '../orml/currencies', default-features = false }
orml-tokens                                = { path = '../orml/tokens', default-features = false }
orml-traits                                = { path = '../orml/traits', default-features = false }
orml-utilities                             = { path = '../orml/utilities', default-features = false }
pallet-aura                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-balances                            = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-grandpa                             = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip          = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-sudo                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-timestamp                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-transaction-payment                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
primitives                                 = { package = "parallel-primitives", path = "../primitives", default-features = false }
sp-api                                     = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-block-builder                           = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-consensus-aura                          = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '0.9.0' }
sp-core                                    = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-inherents                               = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-offchain                                = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-runtime                                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-session                                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-std                                     = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-transaction-pool                        = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }
sp-version                                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1', default-features = false, version = '3.0.0' }

[features]
default            = ['std']
runtime-benchmarks = [
  'hex-literal',
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'pallet-balances/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
]
std                = [
  'codec/std',
  'serde',
  'frame-executive/std',
  'frame-support/std',
  'frame-system/std',
  'frame-system-rpc-runtime-api/std',
  'pallet-aura/std',
  'pallet-balances/std',
  'pallet-grandpa/std',
  'pallet-randomness-collective-flip/std',
  'pallet-sudo/std',
  'pallet-timestamp/std',
  'pallet-transaction-payment/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
  'orml-currencies/std',
  'orml-tokens/std',
  'orml-traits/std',
  'orml-utilities/std',
]
